package grpc.shop.dto;

public class ShopDto {
    private Long id;

    private String shopName;

    private String apiKey;

    private String apiKeyEffTimlmt;

    private Integer apiKeyUsageAgreementVer;

    private String apiKeyUsageAgreementDate;

    private String companyName;

    private String hojinkakuNameKbn;

    private String hojinkakuPosiKbn;

    private String rplsntKanjiFamilyName;

    private String rplsntKanjiName;

    private String rplsntKanaFamilyName;

    private String rplsntKanaName;

    private String rplsntAlphabetFamilyName;

    private String rplsntAlphabetName;

    private String storeName;

    private String chargeDeptZip;

    private String chargeDeptAddressCity;

    private String chargeDeptAddressBldg;

    private String chargeDeptName;

    private String ecRspsblKanjiFamilyName;

    private String ecRspsblKanjiName;

    private String ecRspsblKanaFamilyName;

    private String ecRspsblKanaName;

    private String charegEmailLocal;

    private String chargeEmailDomain;

    private String userContactEmailLocal;

    private String userContactEmailDomain;

    private String adviserEmailLocal;

    private String adviserEmailDomain;

    private String consumerContactTel;

    private String faxNo;

    private String hpAddr;

    private Long currentUserRelationKey;

    private String notes;

    private Integer delFlg;

    private String createDate;

    private String updateDate;

    private Long createId;

    private Long updateId;

    private String createPgmId;

    private String updatePgmId;

    private Long version;

    public Long getId() {
        return id;
    }

    public void setId(Long id) {
        this.id = id;
    }

    public String getShopName() {
        return shopName;
    }

    public void setShopName(String shopName) {
        this.shopName = shopName;
    }

    public String getApiKey() {
        return apiKey;
    }

    public void setApiKey(String apiKey) {
        this.apiKey = apiKey;
    }

    public String getApiKeyEffTimlmt() {
        return apiKeyEffTimlmt;
    }

    public void setApiKeyEffTimlmt(String apiKeyEffTimlmt) {
        this.apiKeyEffTimlmt = apiKeyEffTimlmt;
    }

    public Integer getApiKeyUsageAgreementVer() {
        return apiKeyUsageAgreementVer;
    }

    public void setApiKeyUsageAgreementVer(Integer apiKeyUsageAgreementVer) {
        this.apiKeyUsageAgreementVer = apiKeyUsageAgreementVer;
    }

    public String getApiKeyUsageAgreementDate() {
        return apiKeyUsageAgreementDate;
    }

    public void setApiKeyUsageAgreementDate(String apiKeyUsageAgreementDate) {
        this.apiKeyUsageAgreementDate = apiKeyUsageAgreementDate;
    }

    public String getCompanyName() {
        return companyName;
    }

    public void setCompanyName(String companyName) {
        this.companyName = companyName;
    }

    public String getHojinkakuNameKbn() {
        return hojinkakuNameKbn;
    }

    public void setHojinkakuNameKbn(String hojinkakuNameKbn) {
        this.hojinkakuNameKbn = hojinkakuNameKbn;
    }

    public String getHojinkakuPosiKbn() {
        return hojinkakuPosiKbn;
    }

    public void setHojinkakuPosiKbn(String hojinkakuPosiKbn) {
        this.hojinkakuPosiKbn = hojinkakuPosiKbn;
    }

    public String getRplsntKanjiFamilyName() {
        return rplsntKanjiFamilyName;
    }

    public void setRplsntKanjiFamilyName(String rplsntKanjiFamilyName) {
        this.rplsntKanjiFamilyName = rplsntKanjiFamilyName;
    }

    public String getRplsntKanjiName() {
        return rplsntKanjiName;
    }

    public void setRplsntKanjiName(String rplsntKanjiName) {
        this.rplsntKanjiName = rplsntKanjiName;
    }

    public String getRplsntKanaFamilyName() {
        return rplsntKanaFamilyName;
    }

    public void setRplsntKanaFamilyName(String rplsntKanaFamilyName) {
        this.rplsntKanaFamilyName = rplsntKanaFamilyName;
    }

    public String getRplsntKanaName() {
        return rplsntKanaName;
    }

    public void setRplsntKanaName(String rplsntKanaName) {
        this.rplsntKanaName = rplsntKanaName;
    }

    public String getRplsntAlphabetFamilyName() {
        return rplsntAlphabetFamilyName;
    }

    public void setRplsntAlphabetFamilyName(String rplsntAlphabetFamilyName) {
        this.rplsntAlphabetFamilyName = rplsntAlphabetFamilyName;
    }

    public String getRplsntAlphabetName() {
        return rplsntAlphabetName;
    }

    public void setRplsntAlphabetName(String rplsntAlphabetName) {
        this.rplsntAlphabetName = rplsntAlphabetName;
    }

    public String getStoreName() {
        return storeName;
    }

    public void setStoreName(String storeName) {
        this.storeName = storeName;
    }

    public String getChargeDeptZip() {
        return chargeDeptZip;
    }

    public void setChargeDeptZip(String chargeDeptZip) {
        this.chargeDeptZip = chargeDeptZip;
    }

    public String getChargeDeptAddressCity() {
        return chargeDeptAddressCity;
    }

    public void setChargeDeptAddressCity(String chargeDeptAddressCity) {
        this.chargeDeptAddressCity = chargeDeptAddressCity;
    }

    public String getChargeDeptAddressBldg() {
        return chargeDeptAddressBldg;
    }

    public void setChargeDeptAddressBldg(String chargeDeptAddressBldg) {
        this.chargeDeptAddressBldg = chargeDeptAddressBldg;
    }

    public String getChargeDeptName() {
        return chargeDeptName;
    }

    public void setChargeDeptName(String chargeDeptName) {
        this.chargeDeptName = chargeDeptName;
    }

    public String getEcRspsblKanjiFamilyName() {
        return ecRspsblKanjiFamilyName;
    }

    public void setEcRspsblKanjiFamilyName(String ecRspsblKanjiFamilyName) {
        this.ecRspsblKanjiFamilyName = ecRspsblKanjiFamilyName;
    }

    public String getEcRspsblKanjiName() {
        return ecRspsblKanjiName;
    }

    public void setEcRspsblKanjiName(String ecRspsblKanjiName) {
        this.ecRspsblKanjiName = ecRspsblKanjiName;
    }

    public String getEcRspsblKanaFamilyName() {
        return ecRspsblKanaFamilyName;
    }

    public void setEcRspsblKanaFamilyName(String ecRspsblKanaFamilyName) {
        this.ecRspsblKanaFamilyName = ecRspsblKanaFamilyName;
    }

    public String getEcRspsblKanaName() {
        return ecRspsblKanaName;
    }

    public void setEcRspsblKanaName(String ecRspsblKanaName) {
        this.ecRspsblKanaName = ecRspsblKanaName;
    }

    public String getCharegEmailLocal() {
        return charegEmailLocal;
    }

    public void setCharegEmailLocal(String charegEmailLocal) {
        this.charegEmailLocal = charegEmailLocal;
    }

    public String getChargeEmailDomain() {
        return chargeEmailDomain;
    }

    public void setChargeEmailDomain(String chargeEmailDomain) {
        this.chargeEmailDomain = chargeEmailDomain;
    }

    public String getUserContactEmailLocal() {
        return userContactEmailLocal;
    }

    public void setUserContactEmailLocal(String userContactEmailLocal) {
        this.userContactEmailLocal = userContactEmailLocal;
    }

    public String getUserContactEmailDomain() {
        return userContactEmailDomain;
    }

    public void setUserContactEmailDomain(String userContactEmailDomain) {
        this.userContactEmailDomain = userContactEmailDomain;
    }

    public String getAdviserEmailLocal() {
        return adviserEmailLocal;
    }

    public void setAdviserEmailLocal(String adviserEmailLocal) {
        this.adviserEmailLocal = adviserEmailLocal;
    }

    public String getAdviserEmailDomain() {
        return adviserEmailDomain;
    }

    public void setAdviserEmailDomain(String adviserEmailDomain) {
        this.adviserEmailDomain = adviserEmailDomain;
    }

    public String getConsumerContactTel() {
        return consumerContactTel;
    }

    public void setConsumerContactTel(String consumerContactTel) {
        this.consumerContactTel = consumerContactTel;
    }

    public String getFaxNo() {
        return faxNo;
    }

    public void setFaxNo(String faxNo) {
        this.faxNo = faxNo;
    }

    public String getHpAddr() {
        return hpAddr;
    }

    public void setHpAddr(String hpAddr) {
        this.hpAddr = hpAddr;
    }

    public Long getCurrentUserRelationKey() {
        return currentUserRelationKey;
    }

    public void setCurrentUserRelationKey(Long currentUserRelationKey) {
        this.currentUserRelationKey = currentUserRelationKey;
    }

    public String getNotes() {
        return notes;
    }

    public void setNotes(String notes) {
        this.notes = notes;
    }

    public Integer getDelFlg() {
        return delFlg;
    }

    public void setDelFlg(Integer delFlg) {
        this.delFlg = delFlg;
    }

    public String getCreateDate() {
        return createDate;
    }

    public void setCreateDate(String createDate) {
        this.createDate = createDate;
    }

    public String getUpdateDate() {
        return updateDate;
    }

    public void setUpdateDate(String updateDate) {
        this.updateDate = updateDate;
    }

    public Long getCreateId() {
        return createId;
    }

    public void setCreateId(Long createId) {
        this.createId = createId;
    }

    public Long getUpdateId() {
        return updateId;
    }

    public void setUpdateId(Long updateId) {
        this.updateId = updateId;
    }

    public String getCreatePgmId() {
        return createPgmId;
    }

    public void setCreatePgmId(String createPgmId) {
        this.createPgmId = createPgmId;
    }

    public String getUpdatePgmId() {
        return updatePgmId;
    }

    public void setUpdatePgmId(String updatePgmId) {
        this.updatePgmId = updatePgmId;
    }

    public Long getVersion() {
        return version;
    }

    public void setVersion(Long version) {
        this.version = version;
    }
}